    * Correct terminator_config man page regarding scrollback
      (Egmont Koblinger, LP#1518559)
    * Fix exception when Ctrl-clicking the terminal when not over a
      URL (Egmont Koblinger, LP#1518592)
    * Fix Ctrl-click on URL if terminal has padding (Egmont
      Koblinger, LP#1518596)
    * Fix right-click for mouse aware apps ((Egmont Koblinger,
      LP#1518700)


terminator 0.97:
  * Allow font dimming in inactive terminals
  * Allow URL handler plugins to override label text for URL context
    menus
  * When copying a URL, run it through the URL handler first so the
    resulting URL is copied, rather than the original text
  * Allow users to configure a custom URL handler, since the
    default GTK library option is failing a lot of users in non-GNOME
    environments.
  * Allow rotation of a group of terminals (Andre Hilsendeger)
  * Add a keyboard shortcut to insert a terminal's number (Stephen J 
    Boddy)
  * Add a keyboard shortcut to edit the window title (Stephen J Boddy)
  * Add an easy way to balance terminals by double clicking on their
    separator (Stephen J Boddy)
  * Add a plugin by Sinan Nalkaya to log the contents of terminals.
  * Support configuration of TERM and COLORTERM, via a patch from
    John Feuerstein
  * Support reading configuration from alternate files, via a patch 
    from Pavel Khlebovich
  * Allow creation of new tabs in existing Terminators, via DBus
	* Support the Solarized palettes (Juan Francisco Cantero Hutardo)
	* Translation support for the Preferences window.
	* Lots of translation updates (thanks to everyone who helped!)
  * Bug fixes

terminator 0.96:
  * Unity support for opening new windows (Lucian Adrian Grijincu)
  * Fix searching with infinite scrollback (Julien Thewys #755077)
  * Fix searching on Ubuntu 10.10 and 11.04, and implement searching
    by regular expression (Roberto Aguilar #709018)
  * Optimise various low level components so they are dramatically
    faster (Stephen Boddy)